2009-09-11  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/41316
	* include/bits/forward_list.h (_Fwd_list_node_base<>::_M_sort_after):
	Remove.
	(forward_list<>::sort(_Comp)): Only declare.
	(forward_list<>::sort()): Forward to the latter.
	* include/bits/forward_list.tcc (_Fwd_list_node_base<>::_M_sort_after):
	Remove definition.
	(forward_list<>::sort(_Comp)): Define.
	* testsuite/23_containers/forward_list/requirements/dr438/
	assign_neg.cc: Adjust dg-error line number.
	* testsuite/23_containers/forward_list/requirements/dr438/
	insert_neg.cc: Likewise.
	* testsuite/23_containers/forward_list/requirements/dr438/
	constructor_1_neg.cc: Likewise.
	* testsuite/23_containers/forward_list/requirements/dr438/
	constructor_2_neg.cc: Likewise.

2009-09-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* src/Makefile.am (libstdc___la_LINK): New.
	* src/Makefile.in: Regenerate.

2009-09-09  Loren J. Rittle  <ljrittle@acm.org>

	* testsuite/30_threads/thread/native_handle/typesizes.cc: Remove
	*-*-freebsd* from both dg-do and dg-options.

2009-09-08  Alexandre Oliva  <aoliva@redhat.com>

	* configure: Rebuilt with modified libtool.m4.

2009-09-07  H.J. Lu  <hongjiu.lu@intel.com>
            Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR libstdc++/41280
	* configure.ac: Run "${multi_basedir}/config-ml.in" to generate
	MULTISUBDIR = in subdirectory Makefiles, with ml_norecursion set.
	* configure: Regenerate.

2009-09-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/41267
	* include/bits/stl_algobase.h (__copy_move::__copy_m,
	__copy_move_backward::__copy_move_b): Don't call __builtin_memmove
	with a null third argument.

2009-09-04  Benjamin Kosnik  <bkoz@redhat.com>

	Revert.
	2009-08-06  Benjamin Kosnik  <bkoz@redhat.com>
	* src/compatibility.cc: Make C++0x safe, add in explicit casts to
	bool for stream sentry objects.
	* include/bits/istream.tcc: Same.
	* include/bits/ostream.tcc: Same.
	* include/bits/basic_string.tcc: Same.